# BMP_editor

./: FormaterWrapper.ipynb  README.md
src/src/: CMakeLists.txt  frame.h  main.c  rectangle.h  rotation.h
src/src/config/: AuxFunc.c  AuxFunc.h  configs.c  configs.h
src/src/functions/: frame.c  frame.h  rectangle.c  rectangle.h  rotation.c  rotation.h
